--- a/Collector/pom.xml
+++ b/Collector/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>HeizungsSuite</artifactId>
-        <groupId>de.hank.arnim</groupId>
+        <groupId>de.hanke.arnim</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>de.hank.arnim.CollectorStarter</mainClass>
+                            <mainClass>de.hanke.arnim.CollectorStarter</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
