--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Server</artifactId>
     <dependencies>
         <dependency>
-            <groupId>de.hank.arnim</groupId>
+            <groupId>de.hanke.arnim</groupId>
             <artifactId>Common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
