--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>Common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.8</version>
+        </dependency>
+    </dependencies>
 
 </project>
