--- a/Server/src/main/resources/de/hanke/arnim/common/elasticsearch.properties
+++ b/Server/src/main/resources/de/hanke/arnim/common/elasticsearch.properties
@@ -1,5 +1,5 @@
 ADRESS_ELASTICSEARCH_LOKAL = localhost
-ADRESS_ELASTICSEARCH = localhost
-PORT_ELASTICSEARCH = 9200
+ADRESS_ELASTICSEARCH = 192.168.178.122
+PORT_ELASTICSEARCH = 9201
 PROTOCOL_ELASTICSEARCH = http
 ADDRESS_ISG = http://localhost
