--- a/Server/src/main/resources/de/hanke/arnim/common/elasticsearch.properties
+++ b/Server/src/main/resources/de/hanke/arnim/common/elasticsearch.properties
@@ -1,5 +1,5 @@
 ADRESS_ELASTICSEARCH_LOKAL = localhost
-ADRESS_ELASTICSEARCH = 192.168.178.122
-PORT_ELASTICSEARCH = 9201
+ADRESS_ELASTICSEARCH = 192.168.178.78
+PORT_ELASTICSEARCH = 9200
 PROTOCOL_ELASTICSEARCH = http
-ADDRESS_ISG = http://localhost
+ADDRESS_ISG = http://192.168.178.76
