--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Collector</module>
         <module>Common</module>
         <module>DataCorrector</module>
+        <module>FakeISG</module>
     </modules>
     <packaging>pom</packaging>
 
